data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1265.wast
;; 6. **Test: Loop with Unreachable and Variable Scope**    - **Description:** Create nested loops with variable declarations and references. Place an `unreachable` within the innermost loop and include branch instructions (`br`) interacting with these variables.    - **Constraint Checked:** Ensures that `unreachable` does not disrupt the correct scope and handling of variables within nested loops.    - **Relation to Mismanagement of Block Nesting:** Tests if nested loop variables are managed correctly in the presence of an `unreachable` instruction.

(assert_invalid
  (module
    (func $loop-unreachable-variable-scope
      (local i32)
      (block
        (loop
          (br 1)
          (set_local 0 (i32.const 42))
          (unreachable)
        )
      )
      (get_local 0)
      (i32.const 1)
      (i32.add)
    )
  )
  "type mismatch"
)